<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--toolbar and header-->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:contentInsetStartWithNavigation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/chnot_item"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:src="@android:drawable/ic_menu_add"/>

        <LinearLayout
            android:id="@+id/ln_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="គ្មានទិន្នន័យ"/>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <!--navigation drawer menu-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="visible"
        android:fitsSystemWindows="false">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="150dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/spacing_xsmall"
                        android:src="@drawable/lotto_small"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ផ្ទះឆ្នោត"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@android:color/white"
                            app:fontFamily="sans-serif-medium" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ln_lottery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/baseline_scatter_plot_24"
                        app:tint="@color/colorPrimary" />

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/result_lottery"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/grey_80"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="50dp"
                    android:background="@color/grey_10"/>
                <LinearLayout
                    android:id="@+id/ln_post"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/baseline_dataset_24"
                        app:tint="@color/colorPrimary" />

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/grey_80"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="50dp"
                    android:background="@color/grey_10"/>

                <LinearLayout
                    android:id="@+id/ln_time"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/baseline_access_time_24"
                        app:tint="@color/colorPrimary" />

                    <View
                        android:layout_width="@dimen/spacing_mlarge"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/grey_80"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="50dp"
                    android:background="@color/grey_10"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>